Add - working project of My ToDo app . Add- spring security for admin login only . Add- login Page, Todo controller , update, delete, add method. Static database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+
 spring.application.name=MyToDoApp
+#server.port=8081
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+logging.level.org.springframework=info
+logging.level.com.prinsa.springboot.MyToDoApp=info
+
+spring.mvc.format.date=yyyy-MM-dd
