add - H2 database Configuration add - multiple user login add - spring data JPA Configuration
Modified Pom.xml file
add- Repository Operation done by JPA Repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,13 @@ logging.level.org.springframework=info
 logging.level.com.prinsa.springboot.MyToDoApp=info
 
 spring.mvc.format.date=yyyy-MM-dd
+
+
+ 
+# H2 Database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
